@@ -257,6 +257,7 @@ struct c3x_config {
 	bool prevent_old_units_from_upgrading_past_ability_block;
 	bool introduce_all_human_players_at_start_of_hotseat_game;
 	enum land_transport_rules land_transport_rules;
+	bool no_land_anti_air_from_inside_naval_transport;
 	int years_to_double_building_culture;
 	int tourism_time_scale_percent;
 
