@@ -752,6 +752,9 @@ introduce_all_human_players_at_start_of_hotseat_game = false
 ;   no-escape: Destroys the passengers inside a land tranport when the transport itself is destroyed
 land_transport_rules = []
 
+; Prevents land anti-air units from intercepting overflying units while they're loaded in a naval transport
+no_land_anti_air_from_inside_naval_transport = false
+
 [=======================]
 [=== DAY/NIGHT CYCLE ===]
 [=======================]
