@@ -4124,6 +4124,7 @@ patch_init_floating_point ()
 		{"limit_unit_loading_to_one_transport_per_turn"        , false, offsetof (struct c3x_config, limit_unit_loading_to_one_transport_per_turn)},
 		{"prevent_old_units_from_upgrading_past_ability_block" , false, offsetof (struct c3x_config, prevent_old_units_from_upgrading_past_ability_block)},
 		{"introduce_all_human_players_at_start_of_hotseat_game", false, offsetof (struct c3x_config, introduce_all_human_players_at_start_of_hotseat_game)},
+		{"no_land_anti_air_from_inside_naval_transport"        , false, offsetof (struct c3x_config, no_land_anti_air_from_inside_naval_transport)},
 	};
 
 	struct integer_config_option {
@@ -13441,8 +13442,16 @@ patch_Leader_is_enemy_unit_for_ground_aa (Leader * this, int edx, Unit * bomber)
 	Unit * interceptor;
 	__asm__ __volatile__("mov %%esi, %0" : "=r" (interceptor));
 
-	if ((is->current_config.land_transport_rules & LTR_NO_DEFENSE_FROM_INSIDE) && is_in_land_transport (interceptor))
-		return false; // Exclude this unit as candidate to intercept
+	Unit * container = get_unit_ptr (interceptor->Body.Container_Unit);
+	bool in_transport = (container != NULL) && ! Unit_has_ability (container, __, UTA_Army);
+	if (in_transport &&
+	    (is->current_config.land_transport_rules & LTR_NO_DEFENSE_FROM_INSIDE) &&
+	    (p_bic_data->UnitTypes[container->Body.UnitTypeID].Unit_Class == UTC_Land))
+		return false;
+	else if (in_transport &&
+		 is->current_config.no_land_anti_air_from_inside_naval_transport &&
+		 (p_bic_data->UnitTypes[container->Body.UnitTypeID].Unit_Class == UTC_Sea))
+		return false;
 	else
 		return Leader_is_enemy_unit (this, __, bomber);
 }
